# vMSC

./: .gitignore  CMakeLists.txt  CONFIG.md  Makefile  README.md  main.cpp  vMSC.cpp  vMSC.h  vmsc.conf  vmsc_cic.conf  vmsc_interfaces.conf  vmsc_vlr.conf
.github/: copilot-instructions.md
documentation/: FINAL_COMPLETION_v1.0.md  INDEX.md  PRODUCTION_READY_VERIFICATION.md  README_v1.0.md  ROADMAP.md
include/: call_manager.h  mobility_manager.h  subscriber_manager.h  vmsc.h
src/: call_manager.cpp  mobility_manager.cpp  subscriber_manager.cpp  vmsc.cpp
tests/: test_implemented.sh  test_report.md
